@@ -2191,8 +2191,8 @@ A function with that name existed in GP-1.39.15. Please update your script.
 New syntax: kerint(x) ===> matkerint(x)
 
 matkerint(x,{flag=0}): LLL-reduced Z-basis of the kernel of the matrix x with 
-integral entries. flag is optional, and may be set to 0: default, uses LLL, 1: 
-uses matrixqz (much slower).
+integral entries. flag is deprecated, and may be set to 0 or 1 for backward 
+compatibility.
 
 
   ***   at top-level: kerint1()
@@ -2203,8 +2203,8 @@ A function with that name existed in GP-1.39.15. Please update your script.
 New syntax: kerint1(x) ===> matkerint(x,1)
 
 matkerint(x,{flag=0}): LLL-reduced Z-basis of the kernel of the matrix x with 
-integral entries. flag is optional, and may be set to 0: default, uses LLL, 1: 
-uses matrixqz (much slower).
+integral entries. flag is deprecated, and may be set to 0 or 1 for backward 
+compatibility.
 
 
   ***   at top-level: kerint2()
@@ -4557,4 +4557,4 @@ New syntax: texprint(x) ===> printtex(x)
 printtex({str}*): outputs its string arguments in TeX format.
 
 
-Total time spent: 12
+Total time spent: 22
