@@ -270,37 +270,37 @@ Vecsmall([3])
 
 ? matkerint(matrix(4,4,x,y,x*y))
 
-[-1 -1 -1]
+[ 1 -1 -1]
 
-[-1  0  1]
+[ 0 -1  1]
 
-[ 1 -1  1]
+[ 1  1  1]
 
-[ 0  1 -1]
+[-1  0 -1]
 
 ? matkerint(matrix(4,4,x,y,x*y),1)
 
-[-1 -1 -1]
+[ 1 -1 -1]
 
-[-1  0  1]
+[ 0 -1  1]
 
-[ 1 -1  1]
+[ 1  1  1]
 
-[ 0  1 -1]
+[-1  0 -1]
 
 ? matkerint(matrix(4,6,x,y,2520/(x+y)))
 
-[   3    1]
+[ -3   -1]
 
-[ -30  -15]
+[ 30   15]
 
-[  70   70]
+[-70  -70]
 
-[   0 -140]
+[  0  140]
 
-[-126  126]
+[126 -126]
 
-[  84  -42]
+[-84   42]
 
 ? matmuldiagonal(amat,[1,2,3,4,5,6,7])
 
@@ -676,4 +676,4 @@ Vecsmall([4, 3, 2, 1])
 [1, 1/2, 1/3, 1/4, 1/5, 1/6, 1/7, 1/8, 1/9, 1/10]
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 8
+Total time spent: 7
